Fix api namespacing issues, use text instead of image for the 404 page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -381,6 +381,12 @@ footer .panel-default {
   text-align: center;
 }
 
+.text-404 {
+  color: $bgDefault;
+  font-family: $font-novelty2;
+  font-size: 100px;
+}
+
 .text-right {
   text-align: right;
 }
